--- a/ProdajaSlika/appsettings.json
+++ b/ProdajaSlika/appsettings.json
@@ -6,5 +6,8 @@
     }
   },
   "AllowedHosts": "*",
-  "DbConn": "Data Source = DESKTOP-C24HRCI\\SQLEXPRESS; Initial Catalog = ProdajaSlika; Integrated Security = true; Encrypt= false;"
+  "DbConn": "Data Source = DESKTOP-C24HRCI\\SQLEXPRESS; Initial Catalog = ProdajaSlika; Integrated Security = true; Encrypt= false;",
+  "ConnectionStrings": {
+    "AppDbContextConnection": "Data Source = DESKTOP-C24HRCI\\SQLEXPRESS; Initial Catalog = ProdajaSlika; Integrated Security = true; Encrypt= false;"
+  }
 }
